Melhoria em alguns textos.

--- a/public/lang/en/strings.xml
+++ b/public/lang/en/strings.xml
@@ -18,7 +18,7 @@
     <error>
         <name>The name is required and must contain from 5 to 30 characters.</name>
         <email>Type a valid email.</email>
-        <password>The password can be set with letters, numbers and _(underscore) and must contain from 6 to 20 characters.</password>
+        <password>The password can be setted with letters, numbers and _(underscore) and must contain from 6 to 20 characters.</password>
         <create>Sorry! Could not create the user.</create>
         <update>Sorry! Could not update the user.</update>
         <delete>Sorry! Could not remove the user.</delete>
@@ -32,11 +32,10 @@
     </field>
 
     <register>
-        <title>Please Sign Up</title>
+        <title>Sign up</title>
     </register>
 
     <login>
-        <title>Please Sign in</title>
-        <first>Is your first time?</first>
+        <title>Please, Sign in or</title>
     </login>
 </strings>
