--- a/public/lang/pt-br/strings.xml
+++ b/public/lang/pt-br/strings.xml
@@ -19,9 +19,9 @@
         <name>O nome é obrigatório e deve ter entre 5 a 30 caracteres.</name>
         <email>Informe um email válido.</email>
         <password>A senha pode conter letras, números e _(underline) e deve ter entre 6 a 20 caracteres.</password>
-        <create>Desculpa! Não foi possível criar o novo usuário.</create>
-        <update>Desculpa! Não foi possível atualizar este usuário.</update>
-        <delete>Desculpa! Não foi possível remover este usuário.</delete>
+        <create>Não foi possível criar o novo usuário.</create>
+        <update>Não foi possível atualizar este usuário.</update>
+        <delete>Não foi possível remover este usuário.</delete>
         <login>O usuário não foi encontrado!</login>
     </error>
 
@@ -32,11 +32,10 @@
     </field>
 
     <register>
-        <title>Por favor, registre-se.</title>
+        <title>Cadastre-se</title>
     </register>
 
     <login>
-        <title>Por favor, identifique-se.</title>
-        <first>É sua primeira vez?</first>
+        <title>Por favor, identifique-se ou</title>
     </login>
 </strings>
